# realtime-traffic-severity-pipeline

./: .dockerignore  .gitignore  Dockerfile  GETTING_STARTED_WITH_GITHUB.md  LICENSE  Makefile  PROFILE_README.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample/: README.md  collisions_sample.csv  vehicles_sample.csv
docs/: architecture.md
src/: config.py  dashboard.py  data_quality.py  generate_sample_data.py  producer.py  spark_streaming.py  train_model.py
tests/: test_data_quality.py  test_generate_sample_data.py  test_producer.py
